<resources>
    <string name="app_name">ExerciseSQL</string>
    <string name="namaApp">Mahasiswa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Tambah Data</string>
    <string name="edit">Edit Mahasiswa</string>
    <string name="delete">Delete Mahasiswa</string>
    <string name="title_activity_display_contact">Data Mahasiswa</string>
    <string name="mail">Email        :</string>
    <string name="phone">Nomor Telepon:</string>
    <string name="name2">Nama         :</string>
    <string name="almt">Alamat       :</string>
    <string name="save">Simpan</string>
    <string name="deleteContact">Yakin...ingin menghapus ini.</string>
    <string name="yes">Ya</string>
    <string name="inAme">Masukkan Nama</string>
    <string name="inHP">Masukkan Nomor Telepon</string>
    <string name="inmail">Masukkan Email</string>
    <string name="inAlmt">Masukkan Alamat</string>
    <string name="no">Tidak</string>
    <string name="ti">Daftar Kontak</string>
    <string name="Data">Tambah Data</string>
</resources>
