<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMhs">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/Data"
        android:textColor="#000000" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:id="@+id/pd">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textnm"
                android:layout_width="170dp"
                android:layout_height="38dp"
                android:text="@string/name2"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.192" />

            <EditText
                android:id="@+id/textname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/inAme"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ttextnt"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/textphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inHP"
                android:inputType="number"
                android:textColor="#000000" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textem"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textColor="#000000"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/textmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inmail"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textal"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/almt"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/textalamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inAlmt"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pd"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="140dp"
        android:onClick="run"
        android:text="@string/save" />


</RelativeLayout>